# nseindia_scraper

./: README.md  final_prices.csv  pyproject.toml  scraper.py
