[tool.poetry]
name = "nseindia-scraper"
version = "0.1.0"
description = ""
authors = ["Дарья Коннова <dashustic@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
0-core-client = "^1.1.0a8"
selenium = "^4.15.2"
fake-useragent = "^1.4.0"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
